objects/Audit_Trail__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Display</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Section</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>user Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Audit Trail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Action__c</columns>
        <columns>user_Name__c</columns>
        <columns>User_Id__c</columns>
        <columns>Created_By__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Display__c</columns>
        <columns>Section__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AT_{000}</displayFormat>
        <label>Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>